instructie hoe je video kan laten werken in videotest.java